Project

General

Profile

Actions

Bug #16552

closed

RadosTestECPP::TearDownTestCase asserts in EventCenter::delete_time_event()

Added by Kefu Chai almost 8 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Development
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2016-06-30T00:57:18.789 INFO:tasks.workunit.client.0.smithi033.stdout:                 api_lock: /srv/autobuild-ceph/gitbuilder.git/build/out~/ceph-11.0.0-120-g957ece7/src/msg/async
/Event.cc: In function 'void EventCenter::delete_time_event(uint64_t)' thread 7fe6375c0c40 time 2016-06-30 07:57:19.136610
2016-06-30T00:57:18.789 INFO:tasks.workunit.client.0.smithi033.stdout:                 api_lock: /srv/autobuild-ceph/gitbuilder.git/build/out~/ceph-11.0.0-120-g957ece7/src/msg/async/Event.cc: 248: FAILED assert(in_thread())
2016-06-30T00:57:18.790 INFO:tasks.workunit.client.0.smithi033.stdout:                 api_lock:  ceph version v11.0.0-120-g957ece7 (957ece7e95d8f8746191fd9629622d4457d690d6)
2016-06-30T00:57:18.790 INFO:tasks.workunit.client.0.smithi033.stdout:                 api_lock:  1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x95) [0x7fe62e4c12dd]
2016-06-30T00:57:18.790 INFO:tasks.workunit.client.0.smithi033.stdout:                 api_lock:  2: (EventCenter::delete_time_event(unsigned long)+0x4c) [0x7fe62e58b072]
2016-06-30T00:57:18.790 INFO:tasks.workunit.client.0.smithi033.stdout:                 api_lock:  3: (AsyncConnection::cleanup_handler()+0xbf) [0x7fe62e75492f]
2016-06-30T00:57:18.790 INFO:tasks.workunit.client.0.smithi033.stdout:                 api_lock:  4: (C_clean_handler::do_request(int)+0x27) [0x7fe62e755141]
2016-06-30T00:57:18.791 INFO:tasks.workunit.client.0.smithi033.stdout:                 api_lock:  5: (EventCenter::~EventCenter()+0x5b) [0x7fe62e589b37]
2016-06-30T00:57:18.791 INFO:tasks.workunit.client.0.smithi033.stdout:                 api_lock:  6: (Worker::~Worker()+0x7c) [0x7fe62e5833ba]
2016-06-30T00:57:18.791 INFO:tasks.workunit.client.0.smithi033.stdout:                 api_lock:  7: (Worker::~Worker()+0x18) [0x7fe62e5833fa]
2016-06-30T00:57:18.791 INFO:tasks.workunit.client.0.smithi033.stdout:                 api_lock:  8: (WorkerPool::~WorkerPool()+0xc8) [0x7fe62e57dab8]
2016-06-30T00:57:18.791 INFO:tasks.workunit.client.0.smithi033.stdout:                 api_lock:  9: (WorkerPool::~WorkerPool()+0x18) [0x7fe62e57db4e]
2016-06-30T00:57:18.792 INFO:tasks.workunit.client.0.smithi033.stdout:                 api_lock:  10: (CephContext::TypedSingletonWrapper<WorkerPool>::~TypedSingletonWrapper()+0x4a) [0x7fe62e588f7e]
2016-06-30T00:57:18.792 INFO:tasks.workunit.client.0.smithi033.stdout:                 api_lock:  11: (CephContext::TypedSingletonWrapper<WorkerPool>::~TypedSingletonWrapper()+0x18) [0x7fe62e588fba]
2016-06-30T00:57:18.792 INFO:tasks.workunit.client.0.smithi033.stdout:                 api_lock:  12: (CephContext::~CephContext()+0x55) [0x7fe62e5e1bd7]
2016-06-30T00:57:18.792 INFO:tasks.workunit.client.0.smithi033.stdout:                 api_lock:  13: (CephContext::put()+0x138) [0x7fe62e5e25b0]
2016-06-30T00:57:18.792 INFO:tasks.workunit.client.0.smithi033.stdout:                 api_lock:  14: (librados::RadosClient::~RadosClient()+0xb8) [0x7fe62ddb3f74]
2016-06-30T00:57:18.792 INFO:tasks.workunit.client.0.smithi033.stdout:                 api_lock:  15: (librados::RadosClient::~RadosClient()+0x18) [0x7fe62ddb4026]
2016-06-30T00:57:18.793 INFO:tasks.workunit.client.0.smithi033.stdout:                 api_lock:  16: (librados::Rados::shutdown()+0x65) [0x7fe62dd48ee7]
2016-06-30T00:57:18.793 INFO:tasks.workunit.client.0.smithi033.stdout:                 api_lock:  17: (destroy_one_ec_pool_pp(std::string const&, librados::Rados&)+0x107) [0x4e15c3]
2016-06-30T00:57:18.793 INFO:tasks.workunit.client.0.smithi033.stdout:                 api_lock:  18: (RadosTestECPP::TearDownTestCase()+0x22) [0x4dcf64]
2016-06-30T00:57:18.793 INFO:tasks.workunit.client.0.smithi033.stdout:                 api_lock:  19: (testing::TestCase::RunTearDownTestCase()+0x16) [0x4b092e]
2016-06-30T00:57:18.793 INFO:tasks.workunit.client.0.smithi033.stdout:                 api_lock:  20: (void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::TestCase, void>(testing::TestCase*, void (testing::TestCase::*)(), char const*)+0x65) [0x4babe0]
2016-06-30T00:57:18.793 INFO:tasks.workunit.client.0.smithi033.stdout:                 api_lock:  21: (void testing::internal::HandleExceptionsInMethodIfSupported<testing::TestCase, void>(testing::TestCase*, void (testing::TestCase::*)(), char const*)+0x4b) [0x4b628b]
2016-06-30T00:57:18.794 INFO:tasks.workunit.client.0.smithi033.stdout:                 api_lock:  22: (testing::TestCase::Run()+0x16f) [0x49e337]
2016-06-30T00:57:18.794 INFO:tasks.workunit.client.0.smithi033.stdout:                 api_lock:  23: (testing::internal::UnitTestImpl::RunAllTests()+0x298) [0x4a4a04]

kchai-2016-06-29_23:29:27-rados-master---basic-smithi/284055/teuthology.log


Related issues 1 (0 open1 closed)

Related to Messengers - Bug #16554: segfault in AsyncConnection::handle_connect_msg()ResolvedHaomai Wang06/30/2016

Actions
Actions #1

Updated by Haomai Wang almost 8 years ago

  • Status changed from New to In Progress
Actions #2

Updated by Kefu Chai almost 8 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Kefu Chai almost 8 years ago

  • Related to Bug #16554: segfault in AsyncConnection::handle_connect_msg() added
Actions #4

Updated by Kefu Chai almost 8 years ago

https://github.com/ceph/ceph/pull/10090/commits/7e56fe49c51ea52112510a92f6aa518bc1c474bc

but i think some other commits in that PR also addresses this bug. not sure, though.

Actions #5

Updated by Haomai Wang almost 8 years ago

  • Status changed from Fix Under Review to Resolved
Actions #6

Updated by Greg Farnum about 5 years ago

  • Project changed from Ceph to Messengers
  • Category deleted (msgr)
Actions

Also available in: Atom PDF