msg/async/AsyncMessenger: make sure all connection cleanup handler finished

Fixes: http://tracker.ceph.com/issues/16552
Signed-off-by: Haomai Wang <haomai@xsky.com>