src/msg/async/AsyncMessenger.cc
@@ -627,6 +627,7 @@ void AsyncMessenger::wait()
 
   // close all connections
   shutdown_connections(false);
+  pool->barrier();
 
   ldout(cct, 10) << __func__ << ": done." << dendl;
   ldout(cct, 1) << __func__ << " complete." << dendl;
